Changed Dark Mode (again), added a new font, and bug fixes.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     src: url(Fonts/Moon\ Bold.otf);
 }
 body {
-    background-color: #222222;
+    background-color: #181a1b;
     font-family: 'Moon Bold';
 }
 #search {
